# devon

./: .gitignore  CMakeLists.txt  README.md  about.cpp  about.h  devon_display.cpp  devon_display.h  main.cpp  texture_viewer.cpp  texture_viewer.hpp
.github/workflows/: nightly.yml  push_build.yml
out_bin/: LIBRARY_LICENSES  colour.hlsl  fmtcheck_B8G8R8A8_UNORM_16x16.ktx  passthrough.hlsl  textureviewer_fragment.hlsl  textureviewer_vertex.hlsl
